--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_DESCRIPTION=
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:k6qdJFsqy0lyqnnNskKWl6b8jXlZjRpemCQTq2kbzpc=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,10 +9,10 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE="full path to/laravel_helpdesk/database.sqlite"
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -62,3 +62,4 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_CLIENT_REDIRECT=
+
